--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="anime-grid">
 
     <div class="anime-card">
-      <img src="picher/9999.jfif">
+      <img src="9999.jfif">
       <p>انیمه نعمت گاچای با زیرنویس فارسی</p>
     </div>
 
@@ -126,3 +126,4 @@
 	
 </body>
 </html>
+
