--- a/index.html
+++ b/index.html
@@ -32,70 +32,70 @@
     </div>
 
     <div class="anime-card">
-      <img src="picher/Solo-Leveling-2024.jpg">
+      <img src="Solo-Leveling-2024.jpg">
       <p>انیمه سولو لولینگ زیرنویس فارسی</p>
     </div>
 
     <div class="anime-card">
-      <img src="picher/overlord.jfif">
+      <img src="overlord.jfif">
       <p>انیمه ارباب زینویس فارسی</p>
     </div>
 
     <div class="anime-card">
-      <img src="picher/Nanatsu-no-Taizai-Kamigami-no-Gekirin.jpg">
+      <img src="Nanatsu-no-Taizai-Kamigami-no-Gekirin.jpg">
       <p>انیمه هفت گناه کبیره زیرنویس فارسی</p>
     </div>
 	  
 	  
 	  <div class="anime-card">
-	  	<img src="picher/images.jfif">
+	  	<img src="images.jfif">
 		  <p>انیمه قوی ترین جادوگر ارتش جادوگر شیطان انسان بود زیرنویس فارسی</p>
 	  </div>
 	  
 	  <div class="anime-card">
-	  <img src="picher/Tokyo-Ghoul-Season-One.jpg">
+	  <img src="Tokyo-Ghoul-Season-One.jpg">
 	  <p>انیمه توکیو غول زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/images (1).jfif">
+	  <img src="images (1).jfif">
 	  <p>انیمه لرد کوهستان های زنگ زده زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/The-Beginning-After-the-End-2025.jpg">
+	  <img src="The-Beginning-After-the-End-2025.jpg">
 	  <p>انیمه آغاز پس از پایان زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/jujtsu.jpg">
+	  <img src="jujtsu.jpg">
 	  <p>انیمه جوجوتسو کایسن با زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/tro man.jpg">
+	  <img src="tro man.jpg">
 	  <p>انیمه ترور من با زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/skill.webp">
+	  <img src="skill.webp">
 	  <p>انیمه حالت جهنمی با زیرنویس فارسی</p>
 	  </div>
 	  
 	  <div class="anime-card">
-	  <img src="picher/king.jpg">
+	  <img src="king.jpg">
 	  <p>انیمه زندگی روزمره پادشاه جاوید با زیرنویس فارسی</p>
 	  </div>
 	  
 	  
 	  <div class="anime-card">
-	  <img src="picher/paradies.jpg">
+	  <img src="paradies.jpg">
 	  <p>انیمه بهشت جهنمی با زیرنویس فارسی</p>
 	  </div>
 	  
@@ -126,4 +126,5 @@
 	
 </body>
 </html>
+
 
