--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<header class="header"></header>
 	<nav class="menu">
-	<a href="dash.site.html">خانه</a>&nbsp;&nbsp; 
+	<a href="index.html">خانه</a>&nbsp;&nbsp; 
 		
 	<a href="#">لیست انیمه</a>&nbsp;&nbsp;
 		
@@ -126,5 +126,6 @@
 	
 </body>
 </html>
+
 
 
