--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="description" content="دانلود جدیدترین انیمه‌ها با کیفیت بالا و لینک مستقیم">
 	<link rel="stylesheet" a href="css.dash.css">
 <meta charset="utf-8">
-<title>dashy_anime</title>
+<title>Dash Anime</title>
 </head>
 
 <body>
@@ -126,6 +127,7 @@
 	
 </body>
 </html>
+
 
 
 
