--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div class="logo">🔥dosh anime✦ 
+	<div class="logo">🔥Dash Anime✦ 
 		
 		<span class="tagline">Watch & Download Anime</span></div>
 	
@@ -127,6 +127,7 @@
 	
 </body>
 </html>
+
 
 
 
