--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="icon" type="image/png" href="dashy.png">
 	<meta name="description" content="دانلود جدیدترین انیمه‌ها با کیفیت بالا و لینک مستقیم">
 	<link rel="stylesheet" a href="css.dash.css">
 <meta charset="utf-8">
@@ -127,6 +128,7 @@
 	
 </body>
 </html>
+
 
 
 
